--- a/src/Pages/css/Inicio.css
+++ b/src/Pages/css/Inicio.css
@@ -87,8 +87,8 @@
     display: flex;
     flex-direction: row;
     align-items: center;
-    justify-content: center;
-    gap: 200px;
+    justify-content: space-between;
+    padding: 0px 100px;
     margin-bottom: 70px;
 }
 
